--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             --accent-color: #7c4dff;
             --accent-hover: #5e35b1;
             --success: #00e676;
-            --warning: #ffea00;
         }
 
         /* --- GENERAL --- */
@@ -78,7 +77,7 @@
             margin-bottom: 20px;
         }
 
-        /* --- PROYECTOS DETALLADOS (NUEVO DISEÑO) --- */
+        /* --- PROYECTOS DETALLADOS --- */
         .project-full {
             background: rgba(255, 255, 255, 0.02);
             border: 1px solid var(--card-border);
@@ -115,10 +114,9 @@
             border: 1px solid rgba(124, 77, 255, 0.2);
         }
 
-        /* Grid de Historia vs Tech */
         .project-body {
             display: grid;
-            grid-template-columns: 1.1fr 0.9fr;
+            grid-template-columns: 1.2fr 0.8fr; /* Un poco más de espacio para la historia */
             gap: 40px;
         }
 
@@ -136,7 +134,6 @@
             font-size: 0.95rem;
             text-align: justify;
         }
-
         .story-text p { margin-bottom: 15px; }
 
         .tech-list li {
@@ -147,12 +144,7 @@
             align-items: flex-start;
             gap: 10px;
         }
-
-        .tech-list i {
-            color: var(--success);
-            margin-top: 5px;
-            font-size: 0.8rem;
-        }
+        .tech-list i { color: var(--success); margin-top: 5px; font-size: 0.8rem; }
 
         .future-box {
             margin-top: 20px;
@@ -174,19 +166,41 @@
             font-weight: 600;
             font-size: 0.9rem;
         }
+        .btn-project:hover { background: var(--accent-color); color: white; }
 
-        .btn-project:hover {
-            background: var(--accent-color);
-            color: white;
+        /* --- CARTAS RECOMENDACIÓN --- */
+        .rec-card {
+            position: relative;
+            padding-top: 40px;
+        }
+        .quote-icon {
+            font-size: 2rem;
+            color: var(--accent-color);
+            opacity: 0.3;
+            margin-bottom: 15px;
+        }
+        .rec-text {
+            font-style: italic;
+            color: #d1d1e0;
+            font-size: 0.95rem;
+            margin-bottom: 20px;
+        }
+        .rec-author strong {
+            display: block;
+            color: #fff;
+            font-size: 1.1rem;
+        }
+        .rec-author span {
+            font-size: 0.85rem;
+            color: var(--accent-color);
         }
 
-        /* --- FORMACIÓN & SKILLS --- */
+        /* --- GRID & SKILLS --- */
         .grid-2 {
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 30px;
         }
-
         .skill-tag {
             display: inline-block;
             background: rgba(255,255,255,0.05);
@@ -197,7 +211,7 @@
         }
 
         /* --- RESPONSIVE --- */
-        @media (max-width: 850px) {
+        @media (max-width: 900px) {
             .project-body { grid-template-columns: 1fr; }
             .grid-2 { grid-template-columns: 1fr; }
             .profile-name { font-size: 2.5rem; }
@@ -236,7 +250,7 @@
             </div>
         </section>
 
-        <!-- PROYECTOS DETALLADOS -->
+        <!-- PROYECTOS DESTACADOS -->
         <section>
             <h2 class="section-title">Proyectos Destacados</h2>
 
@@ -249,16 +263,14 @@
                     </div>
                 </div>
                 <div class="project-body">
-                    <!-- Historia -->
                     <div class="story-column">
                         <h4><i class="fas fa-book-open"></i> El Origen</h4>
                         <div class="story-text">
-                            <p>Hace años usaba una web llamada <em>Palomitacas</em> por una función única: predecía mi nota personal antes de ver la película. Cuando la función desapareció, intenté replicarla siendo principiante y fracasé estrepitosamente.</p>
-                            <p>Meses atrás retomé el reto. Sabía que mi dataset personal era ínfimo ("matar moscas a cañonazos"), pero quería ver cuánto había mejorado. No buscaba métricas de libro, sino exprimir cada dato para construir una herramienta que realmente me guiase.</p>
-                            <p>El resultado es una solución humilde pero funcional, que integra APIs y modelos personalizados, demostrando que en entornos de baja información, la ingeniería de datos supera a la complejidad del algoritmo.</p>
+                            <p>Hace años empecé a usar una web llamada <em>Palomitacas</em>. La elegí porque tenía una función que me encantaba: me decía qué nota le daría yo a una película antes de verla. Un día, esa función desapareció sin explicación. En aquel entonces, yo estaba empezando en el análisis de datos y ML, así que intenté replicarla por mi cuenta. Fracasé estrepitosamente y lo dejé aparcado.</p>
+                            <p>Hace unos meses decidí retomar ese reto personal para ver cuánto había mejorado. Sabía que mi base de datos era ínfima y que extraer señal de ahí sería como intentar "matar moscas a cañonazos", pero me daba igual: quería exprimir cada dato y ver hasta dónde podía llegar. No buscaba un modelo perfecto ni métricas de libro, buscaba una herramienta que me guiase.</p>
+                            <p>El resultado es un proyecto de Machine Learning en Python que integra APIs, técnicas de AutoML y modelos personalizados. Es una solución humilde, pero que funciona y cumple su objetivo. Espero volver a este dataset en el futuro con más conocimientos y ver cómo siguen evolucionando las métricas.</p>
                         </div>
                     </div>
-                    <!-- Técnica -->
                     <div class="tech-column">
                         <h4><i class="fas fa-cogs"></i> Arquitectura y Retos</h4>
                         <ul class="tech-list">
@@ -284,16 +296,15 @@
                     </div>
                 </div>
                 <div class="project-body">
-                    <!-- Historia -->
                     <div class="story-column">
                         <h4><i class="fas fa-book-open"></i> El Origen</h4>
                         <div class="story-text">
-                            <p>Todo empezó viendo MetaTrader 5 en el ordenador de mi Jefe de Estudios, quien tenía una estrategia "secreta". Acepté el desafío de construir la mía, pero fracasé repetidamente: cada vez que tenía algo rentable, descubría <em>data leakage</em> o sobreajuste.</p>
-                            <p>Tras muchos intentos, dejé de buscar rentabilidad inmediata y acepté la realidad: "si entra basura, sale basura". Cambié el enfoque radicalmente hacia el método científico.</p>
-                            <p>El éxito de este proyecto no es una estrategia milagrosa, sino la infraestructura construida. Ahora dispongo de un marco robusto para separar la suerte de la verdadera ventaja estadística, validando cualquier idea futura con honestidad.</p>
+                            <p>Prácticamente desde que empecé con Python, sabía que quería aplicarlo a las finanzas y los datos, pero era consciente de su complejidad. Por ello, decidí posponerlo para centrarme en mis estudios y la Selectividad. Todo cambió un día charlando con mi Jefe de Estudios; vi en su ordenador el icono de <em>MetaTrader 5</em> y no pude evitar preguntar. Me explicó que tenía una estrategia automatizada para el EURUSD, pero que le había costado años desarrollarla y no pensaba desvelar su 'secreto' a nadie.</p>
+                            <p>Ese día volví a casa con un reto personal: yo también quería construir algo así. Él era alguien con carrera, máster y años de experiencia, pero aun así acepté el desafío. Pasé tardes, días y semanas enteras experimentando con Python, intercalando mis estudios con la búsqueda de esa idea ganadora y otros proyectos con python. Fracasé una y otra vez. Cada vez que creía tener algo que funcionaba, descubría rastros de <em>data leakage</em> o contaminación de datos. En cuanto corregía el error, la rentabilidad se esfumaba.</p>
+                            <p>Tras muchos intentos, dejé de intentar ignorar la dura realidad: me faltaban Alphas (señales predictivas reales). Sabía que "si entra basura, sale basura". Por eso, con la estadística en la mano, decidí centrarme en construir el pipeline que me ayudaría en el proceso.</p>
+                            <p>Emprendí este proyecto sabiendo que los indicadores convencionales están muy explotados y que las probabilidades de éxito inmediato eran bajas. Sin embargo, el resultado fue un éxito en lo que realmente importa: he creado una infraestructura robusta para testear ideas con rigor científico y separar, por fin, la suerte de la verdadera ventaja estadística. Ahora no solo tengo código; tengo un método sólido para validar cualquier Alpha que surja en el futuro.</p>
                         </div>
                     </div>
-                    <!-- Técnica -->
                     <div class="tech-column">
                         <h4><i class="fas fa-microchip"></i> El Core Técnico</h4>
                         <ul class="tech-list">
@@ -316,16 +327,15 @@
                     </div>
                 </div>
                 <div class="project-body">
-                    <!-- Historia -->
                     <div class="story-column">
                         <h4><i class="fas fa-book-open"></i> El Origen</h4>
                         <div class="story-text">
-                            <p>Buscando soluciones avanzadas, descubrí el paper <strong>SRDDQN</strong>. Me cautivó su uso de <strong>TimesNet</strong>: tratar series temporales como imágenes mediante la Transformada de Fourier. Decidí replicarlo completamente.</p>
-                            <p>El proceso fue una lección de rigor. El paper reportaba métricas extraordinarias que yo no lograba replicar. Al investigar, detecté que el original usaba splits simples (overfitting) e ignoraba costes reales como el spread Bid-Ask.</p>
-                            <p>Mi implementación arrojó resultados más humildes pero realistas. Fue una de mis experiencias de aprendizaje más enriquecedoras sobre la discrepancia entre la teoría académica y la realidad del mercado.</p>
+                            <p>Tras dedicar mucho tiempo a intentar diseñar un sistema propio que fuese robusto, llegué a una conclusión lógica: existen investigadores y mentes brillantes que ya han publicado soluciones avanzadas. ¿Por qué no apoyarme en su experiencia? Así fue como, tras una búsqueda intensiva de literatura técnica, descubrí el paper <strong>SRDDQN</strong>.</p>
+                            <p>Lo que me cautivó de este estudio fue el uso de <strong>TimesNet</strong>. Me pareció fascinante encontrar una arquitectura que tratase las series temporales como imágenes mediante la Transformada de Fourier, que es, casualmente, uno de mis conceptos matemáticos favoritos. La posibilidad de aplicar visión por computador al análisis financiero, sumada a un mecanismo de auto-recompensa dinámica (donde la IA decide cómo premiar su propio aprendizaje), me motivó a implementar el proyecto por completo.</p>
+                            <p>El proceso fue exigente: desde el diseño de diagramas de flujo hasta la reconstrucción de los gráficos de rendimiento. Sin embargo, la réplica también me aportó una lección valiosa sobre el rigor en la investigación. El paper original reportaba rentabilidades y Ratios de Sharpe extraordinarios que, en mi implementación, no se alcanzaron.</p>
+                            <p>Al analizar las causas, identifiqué factores críticos: el paper utiliza un split simple de train y test, lo que facilita un sobreajuste (overfitting) a este último. Además, con casi total seguridad, el estudio omite el impacto del spread entre Bid y Ask. En mi réplica, al ser más estricto con los costes reales de ejecución, los resultados fueron más humildes, pero también más honestos y cercanos a la realidad del mercado. A pesar de la discrepancia en las métricas, este proyecto ha sido una de las experiencias de aprendizaje más enriquecedoras que he tenido.</p>
                         </div>
                     </div>
-                    <!-- Técnica -->
                     <div class="tech-column">
                         <h4><i class="fas fa-brain"></i> Innovación y Arquitectura</h4>
                         <ul class="tech-list">
@@ -344,9 +354,8 @@
 
         </section>
 
-        <!-- FORMACIÓN Y SKILLS (Grid 2 columnas) -->
+        <!-- FORMACIÓN Y SKILLS -->
         <div class="grid-2">
-            
             <!-- FORMACIÓN -->
             <section>
                 <h2 class="section-title">Formación Académica</h2>
@@ -404,17 +413,38 @@
                     <span class="skill-tag">Inglés B2 (Certificado EOI)</span>
                     <span class="skill-tag">Español (Nativo)</span>
                 </div>
-
-                <div class="card" style="margin-top: 20px;">
-                    <h4 style="color:white;">Experiencia y Liderazgo</h4>
-                    <ul style="margin-top: 15px; font-size: 0.95rem; color: var(--text-secondary);">
-                        <li style="margin-bottom: 10px;">• <strong>Tutorías de Estadística (UPO):</strong> Apoyo académico voluntario a compañeros.</li>
-                        <li style="margin-bottom: 10px;">• <strong>Delegado de Clase:</strong> Coordinación profesorado-alumnado.</li>
-                        <li>• <strong>Cartas de Recomendación:</strong> Disponibles (José María Okean / Alfredo García).</li>
-                    </ul>
-                </div>
             </section>
         </div>
+
+        <!-- CARTAS DE RECOMENDACIÓN -->
+        <section>
+            <h2 class="section-title">Referencias Académicas</h2>
+            <div class="grid-2">
+                <!-- Carta O'Kean -->
+                <div class="card rec-card">
+                    <i class="fas fa-quote-left quote-icon"></i>
+                    <p class="rec-text">
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed ultricies mi, nec eleifend magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut auctor tellus mauris, nec egestas velit porttitor in. Nam metus orci, lobortis ut ornare nec, scelerisque sit amet metus."
+                    </p>
+                    <div class="rec-author">
+                        <strong>José María O'Kean</strong>
+                        <span>Universidad Pablo de Olavide (UPO)</span>
+                    </div>
+                </div>
+
+                <!-- Carta Alfredo -->
+                <div class="card rec-card">
+                    <i class="fas fa-quote-left quote-icon"></i>
+                    <p class="rec-text">
+                        "Fusce at tortor laoreet, ullamcorper justo eu, semper felis. Vivamus vestibulum magna quis neque convallis consectetur. In rhoncus dignissim libero in porttitor. In hac habitasse platea dictumst. Integer ipsum ligula, pretium at blandit ac, vulputate eget nibh. In ac lorem luctus, placerat sapien ut."
+                    </p>
+                    <div class="rec-author">
+                        <strong>Alfredo García</strong>
+                        <span>Universidad Pablo de Olavide (UPO)</span>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- FOOTER -->
         <footer>
