--- a/index.html
+++ b/index.html
@@ -243,9 +243,10 @@
             <h2 class="section-title">Perfil</h2>
             <div class="card">
                 <p>
-                    Estudiante de <strong>Análisis Económico (UPO)</strong> con profundo interés en <strong>Machine Learning y Data Science</strong>. 
-                    Soy autodidacta en Python y me mueve la curiosidad rigurosa: no me basta con que un modelo funcione, necesito entender <em>por qué</em> funciona.
-                    Me considero una persona constante y risueña, con vocación para explicar conceptos complejos y trabajar en equipo.
+                    Estudiante de <strong>Análisis Económico (UPO)</strong> con profundo interés en <strong>Machine Learning, Data Science, Estadística y Finanzas Cuantitativas</strong>.
+                </p>
+                <p style="margin-top:15px;">
+                    Soy autodidacta en Python y me mueve la curiosidad. Creo de forma firme que "las funciones describen el mundo" como decía Thomas A., pero con un giro: las funciones y la estadística <em>modelan</em> el mundo. Me gusta entender <em>por qué</em> funcionan los modelos y verles el sentido. Me considero una persona constante y risueña, con vocación para explicar conceptos complejos y trabajar en equipo.
                 </p>
             </div>
         </section>
