--- a/index.html
+++ b/index.html
@@ -363,7 +363,12 @@
                 <div class="card">
                     <h3 style="margin-bottom: 5px;">Grado en Análisis Económico</h3>
                     <p style="color: var(--accent-color); font-weight: 600;">Universidad Pablo de Olavide (UPO)</p>
-                    <p style="font-size: 0.9rem; color: var(--text-secondary);">2025 – 2029</p>
+                    
+                    <!-- Línea añadida -->
+                    <p style="font-size: 1.05rem; font-weight: 500; margin-top: 8px; color: #fff;">
+                        Estudiante de 1º Curso
+                    </p>
+
                     <ul style="margin-top: 15px; list-style: circle; padding-left: 20px; color: var(--text-secondary);">
                         <li>Delegado de clase (2025-2026)</li>
                         <li>Miembro activo del club de debate</li>
